# profiler-get-symbols

./: .gitignore  Cargo.toml  Readme.md  index.html  profiler_get_symbols_wasm.js  profiler_get_symbols_wasm_bg.wasm
.github/workflows/: rust.yml
lib/: Cargo.toml
lib/src/: shared.rs
src/: error.rs  lib.rs  main.rs
src/symbol_table/: compact_symbol_table.rs  elf.rs  macho.rs  mod.rs  pdb.rs
src/symbolicate_common/: error.rs  mod.rs  request.rs
src/v5/: mod.rs  response.rs  symbolicate_response_assembler.rs
src/v6/: mod.rs  response.rs  symbolicate_linkage_resolver.rs  symbolicate_response_assembler.rs
