[package]
name = "profiler-get-symbols-wasm"
version = "0.1.0"
authors = ["Markus Stange <mstange@themasta.com>"]
edition = "2018"

[dependencies]
samply-api = { version = "0.21.0" }
js-sys = "0.3.60"
wasm-bindgen = {version = "0.2.83" }
wasm-bindgen-futures = "0.4.33"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
# console_error_panic_hook = "0.1.6"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
