[package]
name = "profiler-get-symbols-wasm"
version = "0.1.0"
authors = ["Markus Stange <mstange@themasta.com>"]
edition = "2018"

[dependencies]
samply-api = { version = "0.24.0" }
js-sys = "0.3.85"
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
# console_error_panic_hook = "0.1.6"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
